objects/Project_Role__c.object
<CustomObject><fields>
        <fullName>Account__c</fullName>
        <description>Returns the Latin name of the account</description>
        <formula>IF( ISBLANK(Contact__r.Account.Account_Name_Latin__c), Contact__r.Account.Name , Contact__r.Account.Account_Name_Latin__c)</formula>
        <label>Account</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to related a contact to the project</description>
        <inlineHelpText>Contact related to the contact role object</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Contact Roles</relationshipLabel>
        <relationshipName>Project_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <description>Email address of contact</description>
        <formula>Contact__r.Email</formula>
        <inlineHelpText>Email address of contact</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Job_Title__c</fullName>
        <description>used to reflect the job title of the related contact</description>
        <formula>Contact__r.Title</formula>
        <inlineHelpText>used to reflect the job title of the related contact</inlineHelpText>
        <label>Job Title</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to relate a project contact role to a project record</description>
        <inlineHelpText>Identifies the related project</inlineHelpText>
        <label>Related Project</label>
        <referenceTo>MW_Project__c</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>Project_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Role__c</fullName>
        <description>used to identify the role a contact plays in this particular relationship</description>
        <inlineHelpText>Choose a role that the contact is playing in relationship to this specific project</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Department Head/Chair</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Siebel_Role_Id__c</fullName>
        <description>Siebel Role ID</description>
        <externalId>true</externalId>
        <label>Siebel Role Id</label>
        <length>70</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Technical_Resource_Group__c</fullName>
        <formula>TEXT(Related_Project__r.Technical_Resource_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technical Resource Group</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Unique_Project_Contact_Role_Association__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field will store the concatenation of Project Id and Contact Id to determine uniqueness of the relationship and prevent any duplicates</description>
        <label>Unique Project Contact Role Association</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Used to identify the role a contact is playing related to a specific project.  A contact can be related to multiple projects.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Project Contact Role</label><nameField>
        <displayFormat>PCR-{0000000}</displayFormat>
        <label>Project Role Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Project Contact Roles</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>